# blackcap

./: .gitignore  Cargo.toml  README.md  justfile  make-video.sh
crates/host/: Cargo.toml
crates/host/src/: audio.rs  controller.rs  engine.rs  host.rs  main.rs  master.rs  mixer.rs  player.rs  sampler.rs  shared.rs  source.rs  tui.rs  wit.rs  worker.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: dsp.rs  env.rs  lib.rs  osc.rs  perc.rs  song.rs  voice.rs
examples/arpeggio-cartridge/: Cargo.toml
examples/arpeggio-cartridge/src/: lib.rs
examples/blackstar/: Cargo.toml
examples/blackstar/src/: lib.rs
examples/breakdown-cartridge/: Cargo.toml
examples/breakdown-cartridge/src/: lib.rs
examples/featherz/: Cargo.toml
examples/featherz/src/: lib.rs
examples/host-dsp-cartridge/: Cargo.toml
examples/host-dsp-cartridge/src/: lib.rs
examples/multisampled-guitar/: Cargo.toml
examples/multisampled-guitar/src/: lib.rs
examples/sampled-guitar/: Cargo.toml
examples/sampled-guitar/src/: lib.rs
examples/severance/: Cargo.toml
examples/severance/src/: lib.rs
examples/sine-cartridge/: Cargo.toml
examples/sine-cartridge/src/: lib.rs
examples/synthcore-track/: Cargo.toml
examples/synthcore-track/src/: lib.rs
webui/: app.js  build.sh  extract.py  index.html  serve.py  style.css
wit/: jukebox.wit
