[package]
name = "jukebox-cartridge-sdk"
description = "Author blackcap cartridges with oscillators, envelopes, percussion, and a song! tracker DSL."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cargopete/blackcap"

# Builds for wasm32-wasip2; detached from the host workspace.
[workspace]

[dependencies]
wit-bindgen = "0.58"
