[package]
name = "sampled-guitar"
description = "v2 demo: a Karplus-Strong pluck sampled + pitch-shifted via the host sampler, crunched through the host waveshaper."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cargopete/blackcap"

# Builds for wasm32-wasip2; detached from the host workspace.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
jukebox-cartridge-sdk = { path = "../../crates/sdk" }

[profile.release]
opt-level = "s"
lto = true
strip = true
