[package]
name = "synthcore-track"
description = "M5: a ~70s synth-metal track — the worked song the SDK was built for."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cargopete/blackcap"

# Builds for wasm32-wasip2; detached from the host workspace.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
jukebox-cartridge-sdk = { path = "../../crates/sdk" }

[profile.release]
opt-level = "s"
lto = true
strip = true
